# sso-tools

./: .woodpecker.yml  LICENSE  README.md
api/: .gitignore  Dockerfile  README.md  app.py  envfile  pyproject.toml
api/chalicelib/api/: accounts.py  idps.py  users.py
api/chalicelib/util/: __init__.py  database.py  mail.py  util.py
idp/: .gitignore  Dockerfile  README.md  database.js  envfile  idp.js  index.js  package.json
web/: README.md  bucket-policy.json  deploy.sh  index.html  package.json
web/src/: App.vue  api.js  main.js
web/src/components/: Account.vue  Dashboard.vue  Guide.vue  Home.vue  IDP.vue  IdpHome.vue  IdpOauth.vue  IdpOauthGuide.vue  IdpOauthLogs.vue  IdpSaml.vue  IdpSaml2Guide.vue  IdpSamlLogs.vue  IdpSettings.vue  IdpSps.vue  IdpUsers.vue  NewIDP.vue  ResetPassword.vue
web/src/components/legal/: PrivacyPolicy.vue  TermsOfUse.vue
